--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,12 @@
             <scope>runtime</scope>
             <optional>true</optional>
         </dependency>
+        <!--UTIL-->
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.16.0-rc1</version>
+        </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
